Acrescendo mais um igtignore

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/.gitignore
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/.gitignore
@@ -19,7 +19,7 @@
 # Ignora todo o histórico local de arquivos
 .história
 .ionida
-
+.DS_Store
 # Suporte para escopo do snippet de projeto
 .vscode/*.code-snippets
 
